--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@ body{
     width: 100%;
     height: 100%;
 }
-#random-numbe{
+#random-num{
    background: greenyellow;
 }
-#score{
+#Tscore{
    background: blueviolet;
 }
 img{
@@ -20,6 +20,6 @@ h1{
     color:white;
     text-decoration-color: aliceblue;
    }
-#total{
+#Ytotal{
     background-color: aqua;
 }
